# acp-link

./: .gitignore  Cargo.toml  README.md  config-example.toml
.cargo/: config.toml
.github/workflows/: build.yml
docs/: acp-bridge.md  architecture.md  extending-im-platform.md  feishu-permission.json  feishu-protocol.md
src/: acp.rs  config.rs  feishu.rs  im.rs  lib.rs  link.rs  main.rs  mcp.rs  resource.rs  session.rs
src/im/: feishu.rs
src/im/feishu/: channel.rs  client.rs  mcp_tools.rs
src/link/: acp.rs  cron.rs  resource.rs  session.rs
src/mcp/: feishu_tools.rs
