[package]
name = "acp-link"
version = "0.2.4"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = [
    "rustls-tls-webpki-roots",
] }
prost = "0.14.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
futures-util = "0.3.32"
anyhow = "1.0.102"
toml = "0.9.8"
dirs = "6.0.0"
async-trait = "0.1.89"
futures = "0.3.32"
sha2 = "0.10.9"
tokio-util = { version = "0.7.18", features = ["compat"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2"
agent-client-protocol = "0.10.2"
base64 = "0.22.1"
axum = "0.8"
uuid = { version = "1", features = ["v4"] }
